--- a/main.css
+++ b/main.css
@@ -102,6 +102,7 @@ nav {
   color: var(--color-light);
   background-color: var(--color-darker);
   border-radius: var(--borde-radius);
+  width: fit-content;
 }
 .bha {
   animation: jiggle 1.5s 1.5s 1000 ease-in-out;
@@ -141,6 +142,7 @@ nav {
   .nav__icon h1 {
     margin: 0;
     padding: 0;
+    font-size: 3rem;
   }
   .navbar {
     gap: 2rem;
@@ -156,7 +158,7 @@ nav {
     background-color: var(--color-light);
     transform: translateX(-200%);
   }
-  .navbar.show-nav{
+  .navbar.show-nav {
     transform: translateX(0%);
     transition: all 0.5s ease;
   }
@@ -191,7 +193,7 @@ nav {
   aside {
     display: none !important;
   }
-} 
+}
 @media (max-width: 600px) {
   body {
     font-size: 1.2rem;
@@ -213,10 +215,13 @@ nav {
     justify-content: flex-start;
     color: var(--color-darker);
     gap: 2rem;
+
+    box-shadow: 0px 2px 10px 0px rgba(0, 0, 0, 0.2);
   }
   .nav__icon h1 {
     margin: 0;
     padding: 0;
+    font-size: 3rem;
   }
   .navbar {
     gap: 2rem;
@@ -232,7 +237,7 @@ nav {
     background-color: var(--color-light);
     transform: translateX(-200%);
   }
-  .navbar.show-nav{
+  .navbar.show-nav {
     transform: translateX(0%);
     transition: all 0.5s ease;
   }
@@ -272,7 +277,7 @@ nav {
   from {
     transform: translateX(-200);
   }
-  to{
+  to {
     transform: translateX(0%);
   }
 }
