--- a/minimal.css
+++ b/minimal.css
@@ -1,6 +1,6 @@
 /* minimal.css v1.0 by @mflxu */
 /* custom font from google fonts */
-@import url('https://fonts.googleapis.com/css2?family=Sora:wght@100;200;300;400;500;600;700;800&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=DM+Sans:ital,wght@0,400;0,500;0,700;1,400;1,500;1,700&display=swap');
 /* root variables */
 :root {
   --color-primary: #6441a5;
@@ -35,7 +35,7 @@ html{
 example : 1rem = 10px, 2.5rem = 25px, 5rem = 50px...
 */
 body {
-  font-family: 'Sora', sans-serif;
+  font-family: 'DM Sans', sans-serif;
   line-height: 1.5;
   font-weight: 400;
   color: var(--color-darker);
